--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifolio</title>
+    <link type="image/png" sizes="120x120" rel="icon" href="images/icons8-pasta-32.png">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/52951c213d.js" crossorigin="anonymous"></script>
 </head>
