--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     </div>
                     <div class="tab-contents active-tab" id="skills">
                         <ul>
-                            <li><span>Comuter Science</span><br>Desenvolvimento Front-end/Back-end</li>
+                            <li><span>Computer Science</span><br>Desenvolvimento Front-end/Back-end</li>
                             <li><span>Game Development</span><br>Jogos 2D</li>
                             <li><span>UI/UX</span><br>Designing Web/app interfaces</li>
                         </ul>
@@ -58,7 +58,7 @@
                     <div class="tab-contents" id="exp">
                         <ul>
                             <li><span>2024 - Atual</span><br>Estudando C#/HTML-CSS-JavaScript</li>
-                            <li><span>2023</span><br>Febrace - Algoritimo de converção da frequência das cores em Frequência em hz uzando Python</li>
+                            <li><span>2023</span><br>Febrace - algoritmo de conversão da frequência das cores em Frequência em hz uzando Python</li>
                             <li><span>2025* - Esperado</span><br>Estudando Ciência da Computação INTELI/INSPER/ESPM-Tech</li>
                             <li><span>[ *none* ]</span><br>Sem Experiência Profissional até o Momento</li>
                         </ul>
@@ -86,7 +86,7 @@
                 </div>
                 <div>
                     <i class="fa-solid fa-crop-alt"></i>
-                    <h2 id="sv">Web Disign</h2>
+                    <h2 id="sv">Web Design</h2>
                     <p>Designer web com experiência em várias ferramentas e tecnologias, incluindo HTML, CSS e JavaScript.</p>
                 </div>
                 <div>
