--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     </div>
                     <div class="tab-contents" id="edu">
                         <ul>
-                            <li><span>2024</span><br>Ecola Lourenço Castanho São Paulo, Brasil</li>
+                            <li><span>2024</span><br>Escola Lourenço Castanho São Paulo, Brasil</li>
                         </ul>
                     </div>
                 </div>
