--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
                 <div class="work">
                     <img src="images/work1.png">
                     <div class="layer">
-                        <h3>Xadres no terminal</h3>
-                        <p>Com Python jogue xadres mesmo sem internet com um amigo!</p>
+                        <h3>Xadrez no terminal</h3>
+                        <p>Com Python jogue xadrez mesmo sem internet com um amigo!</p>
                         <a href="https://github.com/Ramalha/xadrez_terminal" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
